[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "deepseek-api"
dependencies = [
    "requests",
    "numpy",
    "wasmtime",
    "platformdirs"
]
dynamic = ["version"]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.version]
source = "vcs"